3.1.14
* buffed ranger spells a bit
3.1.13
* added tridents
* fixed party exp sharing
* attempt to fix mysterious bug
* hopefully should fix game not working for turkey players
* fix player lvl getting reset (note to self, some code has more than 1 effect)
3.1.12
* switched to release build. Servers don't seem to be crashing anymore, mod seems stable now!
* another dmg and exp party fix attempt
3.1.11
* attempt to fix parties
* should stop auto salvage bag from salvaging enchanted or named items.
* reduced map loot drops a bit
* fix key of unity and key of new dawn.
3.1.10
* mobs in maps shouldnt despawn anymore
* should fix party commands needing OP
* try fix party members being able to kill each other
* added new dungeon rooms
* made dungeon size random but usually smaller
* dungeon will attempt to limit boss rooms to 1 or 2
* attempt to make mobs not move until they see player in dungeons
3.1.9
* made parties not save on server reboot due to lag.
* fix nullp in loot gen
3.1.8
* try fix structure blocks not being activated in dungeons
* fix being able to place blocks in dungeons
* added party exp sharing if nearby
3.1.7
* make it possible to destroy graves from other mods in dungeons.
3.1.6
* nerfed boss and mythic mobs dmg a bit
* loot tweaks
* fix death not losing exp
3.1.5
* fixed each map portal having its own dungeon
* made ticks to update dungeon blocks faster
3.1.4
* fixed blink strike server crash
* fix map chest dropping itself
* made mobs scale less hard per map tier
* fix map dmg affix always generating at max value
* updated chinese lang
3.1.3
* updated chinese lang by mcfensi
* nerf to refreshing breeze and bleed mastery
3.1.2
* nerf blood mage
3.1.1
salvage fix
3.1.0
THIS UPDATE WILL BREAK SOME EXISTING ITEMS FROM OLDER SAVES. 
This is not something i do lightly, but with me starting to turn my stuff into datapacks, it's something i would have to do sooner or later. 
Better now than after people already make datapacks.

So bad news first: